--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "apollo-boost": "^0.4.9",
+        "graphql": "^15.2.0",
+        "graphql-tag": "^2.12.6",
         "tailwindcss": "^1.4.6",
+        "vue-apollo": "^3.0.3",
         "vue-router": "^3.3.4"
     }
 }
